src/test/deca/context/invalid/homemade/unary_m_diff_type_decompile.res
{
	boolean a = false;
	(a = -a);
}
